--- a/app/src/main/res/layout/activity_add_account.xml
+++ b/app/src/main/res/layout/activity_add_account.xml
@@ -26,6 +26,7 @@
                 <ImageView
                     android:layout_width="62dp"
                     android:layout_height="84dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/logo_ac" />
 
             </LinearLayout>
