--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -21,37 +21,45 @@
                 android:layout_marginBottom="15dp"
                 android:background="@color/color_profile">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/ivProfimeImage"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_item"
+                    android:layout_height="@dimen/_70sdp"
+                    app:cardCornerRadius="8dp"
+                    app:cardBackgroundColor="@color/color_profile"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/ic_guest_profile" />
+                    android:layout_width="@dimen/_70sdp">
+                    <ImageView
+                        android:id="@+id/ivProfimeImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_baseline_person_24" />
+                </androidx.cardview.widget.CardView>
+
+
 
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tv_userfullName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:text=""
                     android:gravity="center"
                     android:textColor="@color/black"
-                    android:layout_below="@+id/ivProfimeImage"
+                    android:layout_below="@+id/card_item"
                     android:textSize="14dp" />
 
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tv_membership_title"
                     android:visibility="visible"
                     android:layout_width="76dp"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:text="@string/free"
                     android:gravity="center"
                     android:layout_centerInParent="true"
                     android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
                     android:textSize="12dp"
                     android:layout_below="@+id/tv_userfullName"
-                    android:layout_margin="5dp"
+                    android:layout_margin="3dp"
                     android:background="@color/holo_green"/>
             </RelativeLayout>
 
