--- a/app/src/main/res/layout/activity_wishlist_single_data.xml
+++ b/app/src/main/res/layout/activity_wishlist_single_data.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_5sdp"
+    android:layout_margin="@dimen/_8sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/fav_click_item"
@@ -19,8 +19,9 @@
                 android:layout_height="match_parent">
                 <ImageView
                     android:id="@+id/product_image"
-                    android:layout_width="158dp"
-                    android:layout_height="170dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/pexels_paris" />
 
                 <com.sa.rezq.view.AppTextView
@@ -32,7 +33,7 @@
                     android:layout_above="@+id/tv_product_sub_title"
                     android:textStyle="bold"
                     android:textSize="12dp"
-                    android:text="@string/marina"/>
+                    android:text=""/>
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tv_product_sub_title"
                     android:layout_width="match_parent"
