--- a/app/src/main/res/layout/edit_profile_activity.xml
+++ b/app/src/main/res/layout/edit_profile_activity.xml
@@ -132,7 +132,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/last_name"
-                        android:imeOptions="actionNext"
+                        android:imeOptions="actionDone"
                         android:inputType="text" />
 
                 </com.google.android.material.textfield.TextInputLayout>
