--- a/app/src/main/res/layout/nav_header_main1.xml
+++ b/app/src/main/res/layout/nav_header_main1.xml
@@ -22,14 +22,18 @@
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_item"
+            android:layout_height="@dimen/_70sdp"
+            app:cardCornerRadius="8dp"
+            android:layout_width="@dimen/_70sdp">
+            <ImageView
+                android:id="@+id/nav_profile_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_baseline_person_24" />
+        </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:id="@+id/nav_profile_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/offer_border"
-            android:src="@drawable/ic_guest_profile"
-            app:shapeAppearanceOverlay="@style/roundedCornersImageView" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
