--- a/app/src/main/res/layout/places_nearyou_listdata.xml
+++ b/app/src/main/res/layout/places_nearyou_listdata.xml
@@ -17,6 +17,7 @@
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_group_al"/>
         </LinearLayout>
         <LinearLayout
