--- a/app/src/main/res/layout/redeem_offer_activity.xml
+++ b/app/src/main/res/layout/redeem_offer_activity.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar_detail" />
@@ -24,16 +23,27 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:orientation="horizontal">
+
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:id="@+id/iv_restro_image"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_item"
                     android:layout_width="@dimen/_60sdp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_centerInParent="true"
                     android:layout_height="@dimen/_60sdp"
-                    android:src="@drawable/ic_baseline_image_24"/>
+                    app:cardCornerRadius="5dp"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+                    <ImageView
+                        android:id="@+id/iv_restro_image"
+                        android:layout_width="match_parent"
+                        android:scaleType="centerCrop"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_baseline_image_24"/>
+                </androidx.cardview.widget.CardView>
+
+
             </RelativeLayout>
 
             <LinearLayout
@@ -46,6 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
+                    android:maxLines="2"
                     android:textColor="#171717"
                     android:text=""/>
 
@@ -117,14 +128,23 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/image_offer"
-                    android:layout_width="55dp"
+                <androidx.cardview.widget.CardView
                     android:layout_marginTop="20dp"
-                    android:gravity="center"
-                    android:background="@drawable/offer_border"
-                    android:layout_height="55dp" />
+                    android:layout_width="@dimen/_55sdp"
+                    android:layout_height="@dimen/_55sdp"
+                    app:cardCornerRadius="5dp"
+                    android:layout_gravity="center"
+                    android:gravity="center">
+                    <ImageView
+                        android:id="@+id/image_offer"
+                        android:layout_width="match_parent"
+                        android:gravity="center"
+                        android:scaleType="centerCrop"
+                        android:background="@drawable/rezq_logo"
+                        android:layout_height="match_parent" />
+                </androidx.cardview.widget.CardView>
+
+
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/offer_title"
                     android:layout_width="wrap_content"
