--- a/app/src/main/res/layout/show_offers_coupon.xml
+++ b/app/src/main/res/layout/show_offers_coupon.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
         android:id="@+id/tool_bar"
@@ -23,14 +24,21 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv_restro_image"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_item"
+                    android:layout_height="@dimen/_65sdp"
+                    app:cardCornerRadius="5dp"
                     android:layout_marginLeft="10dp"
-                    android:background="@drawable/offer_border"
-                    android:src="@drawable/ic_baseline_image_24" />
+                    android:layout_width="@dimen/_65sdp">
+                    <ImageView
+                        android:id="@+id/iv_restro_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_image_24" />
+
+                </androidx.cardview.widget.CardView>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -105,13 +113,20 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="52dp"
-                        android:layout_height="52dp"
+                    <androidx.cardview.widget.CardView
+                        android:layout_height="@dimen/_52sdp"
+                        app:cardCornerRadius="5dp"
                         android:layout_marginTop="20dp"
-                        android:background="@drawable/offer_border"
-                        android:id="@+id/image_offer"
-                        android:gravity="center" />
+                        android:layout_width="@dimen/_52sdp"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/image_offer"
+                            android:scaleType="centerCrop" />
+                    </androidx.cardview.widget.CardView>
+
+
 
                     <com.sa.rezq.view.AppTextView
                         android:id="@+id/offer_title"
