--- a/app/src/main/res/layout/vendor_store_list_recyclerview_data.xml
+++ b/app/src/main/res/layout/vendor_store_list_recyclerview_data.xml
@@ -24,7 +24,9 @@
                 <ImageView
                     android:id="@+id/product_image"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    />
 
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/product_title"
