--- a/app/src/main/res/layout/vendor_store_listdata.xml
+++ b/app/src/main/res/layout/vendor_store_listdata.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/vendor_store_list"
@@ -9,14 +10,21 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="horizontal">
-
+        <androidx.cardview.widget.CardView
+            android:layout_height="56dp"
+            app:cardCornerRadius="5dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_width="56dp">
             <ImageView
                 android:id="@+id/iv_vendor_logo"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_group_al"
-                android:layout_marginLeft="10dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/rezq_logo" />
+        </androidx.cardview.widget.CardView>
+
+
 
         <LinearLayout
             android:layout_width="@dimen/_140sdp"
