--- a/app/src/main/res/layout/edit_profile_activity.xml
+++ b/app/src/main/res/layout/edit_profile_activity.xml
@@ -94,6 +94,7 @@
                 android:layout_marginTop="@dimen/_20sdp">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/ti_first_name"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -120,6 +121,7 @@
                 android:layout_marginTop="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/ti_last_name"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
