--- a/app/src/main/res/layout/popular_places_recyclerview_data.xml
+++ b/app/src/main/res/layout/popular_places_recyclerview_data.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/product_image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_35sdp"
-                android:src="@drawable/image1" />
+                android:src="@drawable/ic_lazy_load" />
 
 
 
