--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -26,6 +26,7 @@
 
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/iv_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
