--- a/app/src/main/res/layout/upgrade_membership.xml
+++ b/app/src/main/res/layout/upgrade_membership.xml
@@ -66,7 +66,7 @@
                 <ImageView
                     android:layout_width="326dp"
                     android:layout_height="181dp"
-                    android:src="@drawable/reqq_plus" />
+                    android:src="@drawable/ic_lazy_load" />
             </RelativeLayout>
 
             <LinearLayout
