--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
 
 
@@ -11,24 +13,23 @@
         android:title="@string/home" />
     <item
         android:id="@+id/nav_recentCoupon"
-        android:icon="@drawable/ic_history"
+        android:icon="@drawable/history"
         android:title="@string/coupon" />
     <item
         android:id="@+id/nav_fav"
-        android:icon="@drawable/ic_like"
+        android:icon="@drawable/like"
         android:title="@string/favourite" />
     <item
         android:id="@+id/nav_membership"
-        android:icon="@drawable/ic_credit_card__1_"
+        android:icon="@drawable/credit_card"
         android:title="@string/membership" />
     <item
         android:id="@+id/nav_account"
-        android:icon="@drawable/ic_userss"
+        android:icon="@drawable/user"
         android:title="@string/account" />
     <item
         android:id="@+id/nav_logout"
-        android:icon="@drawable/ic_logout"
+        android:icon="@drawable/logout"
         android:title="@string/logout" />
-
 
 </menu>
