--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
 
@@ -16,12 +17,15 @@
     <dimen name="emptyImageHeight">100dp</dimen>
     <dimen name="emptyImageWidth">150dp</dimen>
 
+
     <dimen name="errorTitleTextSize">8sp</dimen>
     <dimen name="errorContentTextSize">6sp</dimen>
     <dimen name="errorImageHeight">100dp</dimen>
     <dimen name="errorImageWidth">150dp</dimen>
 
     <dimen name="loader_width">85dp</dimen>
+
+
 
 
     <dimen name="text_size_header">20dp</dimen>
