--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,14 +16,18 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="TextInputLayoutStyle" parent="@android:style/TextAppearance">
+    <style name="TextInputLayoutStyle" parent="Widget.Design.TextInputLayout">
         <item name="android:textColor">@color/black</item>
         <item name="colorControlNormal">@color/black</item>
+        <item name="android:fontFamily">@fonts/regular</item>
+
         <item name="colorControlHighlight">@color/app_grey_text</item>
         //added attributes
         <item name="colorControlActivated">@color/black</item>
 
     </style>
+
+
 
     <style name="CustomRatingBarSmall" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/rating_bar</item>
@@ -36,6 +40,47 @@
         <item name="android:minHeight">@dimen/_32sdp</item>
         <item name="android:maxHeight">@dimen/_32sdp</item>
     </style>
+
+    <style name="RobotoTextViewStyle" >
+        <item name="android:textSize">14dp</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name="NavigationText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:fontFamily">regular</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name="NavigationView" >
+        <item name="android:textSize">14dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="NavDrawerTextStyle" parent="Base.TextAppearance.AppCompat">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="editText" parent="AppTheme">
+        <item name="colorAccent">@color/black</item>
+    </style>
+
+    <style name="DrawerTextStyle" >
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="NavigationViewStyle">
+        <item name="android:textSize">20sp</item> <!-- menu item text size-->
+        <item name="android:listPreferredItemHeightSmall">40dp</item><!-- menu item height-->
+    </style>
+
+
+
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="general_edittext_style">
