--- a/app/src/main/res/layout/activity_allpopular_category_view_data.xml
+++ b/app/src/main/res/layout/activity_allpopular_category_view_data.xml
@@ -43,6 +43,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_gravity="left"
                 android:orientation="horizontal">
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/vendor_count"
