--- a/app/src/main/res/layout/activity_membership_details.xml
+++ b/app/src/main/res/layout/activity_membership_details.xml
@@ -20,13 +20,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginTop="15dp">
 
             <ImageView
                 android:id="@+id/iv_membership_image"
-                android:layout_width="326dp"
+                android:layout_width="match_parent"
                 android:layout_height="181dp"
-                android:src="@drawable/rezq_logo" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_lazy_load" />
         </RelativeLayout>
 
         <LinearLayout
