--- a/app/src/main/res/layout/membership_banner_dataview.xml
+++ b/app/src/main/res/layout/membership_banner_dataview.xml
@@ -13,7 +13,7 @@
             android:id="@+id/iv_banner_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rezq_logo">
+            android:background="@drawable/ic_lazy_load">
 
         </ImageView>
 
