--- a/app/src/main/res/layout/nav_header_main1.xml
+++ b/app/src/main/res/layout/nav_header_main1.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/nav_profile_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_person_24" />
+                android:src="@drawable/ic_guest_profile" />
         </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -85,7 +85,7 @@
 
                 <LinearLayout
                     android:id="@+id/ll_validity"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <com.sa.rezq.view.AppTextView
