--- a/app/src/main/res/layout/popular_places_recyclerview_data.xml
+++ b/app/src/main/res/layout/popular_places_recyclerview_data.xml
@@ -44,7 +44,7 @@
                 android:layout_marginTop="5dp"
                 android:text="@string/off"
                 android:singleLine="true"
-                android:textColor="@color/holo_green" />
+                android:textColor="@color/holo_green_light" />
 
 
         </LinearLayout>
