--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="8dp">
 
         <RelativeLayout
             android:id="@+id/rr_header"
@@ -49,18 +49,17 @@
                 android:textSize="@dimen/_14sdp"
                 android:textColor="#171717" />
             <LinearLayout
+                android:id="@+id/ln_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:layout_centerInParent="true"
+                android:layout_marginLeft="@dimen/_40sdp"
                 android:orientation="vertical">
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tvlocation"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:text="@string/currentlocation"
+                    android:layout_marginLeft="@dimen/_15sdp"
                     android:drawableLeft="@drawable/ic_location"
                     android:drawablePadding="5dp"
                     android:textColor="@color/black"
@@ -69,16 +68,18 @@
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tvHeaderText"
                     android:layout_width="200dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
                     android:text=""
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="16dp"
+                    android:ellipsize="middle"
                     android:textStyle="bold"
                     android:visibility="visible" />
+
+
             </LinearLayout>
+
 
 
             <de.hdodenhof.circleimageview.CircleImageView
