--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -70,16 +70,17 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:gravity="center"
                     android:singleLine="true"
+                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                     android:textColor="@color/black"
                     android:textSize="16dp"
-                    android:ellipsize="middle"
+                    android:ellipsize="none"
                     android:textStyle="bold"
                     android:visibility="visible" />
 
 
             </LinearLayout>
-
 
 
             <de.hdodenhof.circleimageview.CircleImageView
